force-app/main/default/objects/SBQQ__QuoteTerm__c/fields/chk_AddtoTCs__c.field-meta.xml
<CustomField>
    <fullName>chk_AddtoTCs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AddtoTCs</label>
    <type>Checkbox</type>
</CustomField>