force-app/main/default/objects/SBQQ__QuoteTerm__c/fields/chk_ManuallyOverridden__c.field-meta.xml
<CustomField>
    <fullName>chk_ManuallyOverridden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually Overridden</label>
    <type>Checkbox</type>
</CustomField>