force-app/main/default/objects/SBQQ__QuoteTerm__c/fields/lkp_AccountTerm__c.field-meta.xml
<CustomField>
    <fullName>lkp_AccountTerm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Term</label>
    <referenceTo>Account_Term__c</referenceTo>
    <relationshipLabel>Quote Terms</relationshipLabel>
    <relationshipName>Quote_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>